--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
-<h2>Sign up</h2>
+<section class="hero is-primary is-fullheight">
+<div class="hero-body">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-6-tablet is-6-desktop is-6-widescreen">
+				<div class="box">
+					<div class="field has-text-centered">
+						<strong>Sign Up</strong>
+					</div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+					<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+						<%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+						<div class="field">
+							<%= f.label :full_name , class: 'label' %>
+							<%= f.text_field :email, autofocus: true, autocomplete: "full_name", class: 'input' %>
+						</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+						<div class="field">
+							<%= f.label :email, class: 'label' %>
+							<%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input' %>
+						</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+						<div class="field">
+							<%= f.label :password, class: 'label' %>
+							<% if @minimum_password_length %>
+							<em>(<%= @minimum_password_length %> characters minimum)</em>
+							<% end %><br />
+							<%= f.password_field :password, autocomplete: "new-password", class: 'input'%>
+						</div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+						<div class="field">
+							<%= f.label :password_confirmation, class: 'label' %>
+							<%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'input' %>
+						</div>
 
-<%= render "devise/shared/links" %>
+						<div class="field">
+							<%= f.submit "Sign up", class: 'button is-danger is-fullwidth m-t-10 m-b-10'%>
+						</div>
+					<% end %>
+					
+					<%= render "devise/shared/links" %>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</section>
