--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,6 +38,8 @@
 							<%= f.submit "Sign up", class: 'button is-danger is-fullwidth m-t-10 m-b-10'%>
 						</div>
 					<% end %>
+
+					<%= link_to 'Sign in with Facebook', user_facebook_omniauth_authorize_path, class: 'button is-primary is-fullwidth' %>
 					
 					<%= render "devise/shared/links" %>
 
