--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,7 +37,7 @@
 						</div> 
 					<% else %>
 						<div class="navbar-item has-dropdown is-hoverable">
-							<a class="navbar-item"><%= current_user.email %></a>
+							<a class="navbar-item"><%= current_user.full_name %></a>
 							<div class="navbar-dropdown">
 							<%= link_to 'Profile', edit_user_registration_path, class: 'navbar-item'%>
 								<a href="" class="navbar-item">Dashboard</a>
@@ -46,6 +46,55 @@
 							</div>
 						</div>
 					<% end %>
+				</div>
+			</div>
+		</nav>
+
+
+		<nav class="navbar has-shadow">
+			<div class="container">
+				<div class="navbar">
+					<%= link_to 'Dashboard', dashboard_path, class: 'navbar-item' %>
+
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link">Selling</a>
+						<div class="navbar-dropdown">
+							<a class="navbar-item">Create New Gig</a>
+							<a class="navbar-item">Buying</a>
+						</div>
+					</div>
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link">Buying</a>
+						<div class="navbar-dropdown">
+							<a class="navbar-item">Post Request</a>
+							<a class="navbar-item">Manage Request</a>
+						</div>
+					</div>
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link">Buyer Request</a>
+						<div class="navbar-dropdown">
+							<a class="navbar-item">Active Request</a>
+							<a class="navbar-item">Offers Sent</a>
+						</div>
+					</div>
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link">Orders</a>
+						<div class="navbar-dropdown">
+							<a class="navbar-item">Selling Orders</a>
+							<a class="navbar-item">Buying Orders</a>
+						</div>
+					</div>
+
+					<%= link_to 'Earnings', dashboard_path, class: 'navbar-item' %>
+					<%= link_to 'Messages', dashboard_path, class: 'navbar-item' %>
+
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link">Setting</a>
+						<div class="navbar-dropdown">
+							<a class="navbar-item">Payment Method</a>
+							<a class="navbar-item">Payout Method</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</nav>
