upload user avatar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,7 +37,12 @@
 						</div> 
 					<% else %>
 						<div class="navbar-item has-dropdown is-hoverable">
-							<a class="navbar-item"><%= current_user.email %></a>
+							<a class="navbar-link">
+								<figure class="image is-24x24 m-r-5">
+										<%= image_tag avatar_url(current_user), class: "is-rounded" %>
+								</figure>
+								<%= current_user.email %>
+							</a>
 							<div class="navbar-dropdown">
 								<%= link_to 'Profile', edit_user_registration_path, class: 'navbar-item'%>
 								<a href="" class="navbar-item">Dashboard</a>
@@ -64,7 +69,7 @@
 		});
 		</script>
 
-		<nav class="navbar has-shadow">
+		<nav class="navbar has-shadow" style="z-index: 5">
 			<div class="container">
 				<div class="navbar">
 					<%= link_to 'Dashboard', dashboard_path, class: 'navbar-item' %>
