--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
 				</div>
 
 				<div class="navbar-end">
-					<a class="navbar-item">Post Gig</a>
+					<%= link_to 'Post Gig', new_gig_path, class: 'navbar-item' %>
 					<a class="navbar-item">Browse Gigs</a>
 					<% if (!user_signed_in?) %>
 						<div class="navbar-item">
@@ -77,7 +77,7 @@
 					<div class="navbar-item has-dropdown is-hoverable">
 						<a class="navbar-link">Selling</a>
 						<div class="navbar-dropdown">
-							<a class="navbar-item">Create New Gig</a>
+							<%= link_to 'Create New Gig', new_gig_path, class: 'navbar-item' %>
 							<a class="navbar-item">Buying</a>
 						</div>
 					</div>
