gig details page - carousel

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -14,13 +14,16 @@ $sides: (top, bottom, left, right);
   .m-#{$space} {
     margin: #{$space}px !important;
   }
-
+	
   .p-#{$space} {
-    padding: #{$space}px !important;
+		padding: #{$space}px !important;
   }
 	.h-#{$space} {
 		margin-top: #{$space}px !important;
 		margin-bottom: #{$space}px !important;
+	}
+	.f-#{$space} {
+		font-size: #{$space}px !important;
 	}
 }
 .is-horizontal-center {
