gigs details page - pricing types

--- a/app/views/gigs/_step2.html.erb
+++ b/app/views/gigs/_step2.html.erb
@@ -23,7 +23,7 @@
 
 										<div class="control has-icons-right">
 											<%= p.number_field :price, placeholder: "Price", class: "input is-radiusless", default: 1 %>
-											<span class="icon is-small is-right">days</span>
+											<span class="icon is-small is-right">$</span>
 										</div>
 						</div>
 				<% end %>
