--- a/app/views/orders/selling_orders.html.erb
+++ b/app/views/orders/selling_orders.html.erb
@@ -24,7 +24,7 @@
 				<tr>
 					<td><%= o.created_at.strftime('%d %b %Y')%></td>
 					<td><%= o.buyer_name %></td>
-					<td><%= o.title, gig_path(o.gig) %></td>
+					<td><%= link_to o.title, gig_path(o.gig) %></td>
 					<td><%= o.due_date.strftime('%d %b %Y')%></td>
 					<td><%= o.amount %></td>
 					<td>
