--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -15,7 +15,7 @@
 																 	<%= @request.category.name %>
 																	 <span class="is-pulled-right">Posted on: <%= @request.created_at.strftime("%d, %b %Y") %></span>
 																 </p>
-														Need to be delivered in: <%= @request.delivery %> days | Offers: 0 | Budget: $<%= @request.budget %>
+														Need to be delivered in: <%= @request.delivery %> days | Offers: <%= @request.offers.count %> | Budget: $<%= @request.budget %>
 														</div>
 												</article>
                     </div>
@@ -105,7 +105,30 @@
 
             <!-- RIGHT SIDE -->
             <div class="column">
-                
+                <div class="card">
+									<%= form_for Offer.new do |f| %>
+										<div class="card-content">
+											<%= f.hidden_field :request_id, value: @request.id %>
+
+											<div class="field">
+												<label class="label">Amount ($)</label>
+												<%= f.text_field :amount, class: "input"  %>
+											</div>
+
+											<div class="field">
+												<label class="label">Deliver in Days</label>
+												<%= f.text_field :days, class: "input"  %>
+											</div>
+
+											<div class="field">
+												<label class="label">Offer note</label>
+												<%= f.text_area :note, class: "textarea"  %>
+											</div>
+
+											<%= f.submit 'Send Offer', class: "button is-primary is-fullwidth" %>
+										</div>
+									<% end %>
+								</div>
             </div>
 
         </div>
