--- a/app/views/requests/my_offers.html.erb
+++ b/app/views/requests/my_offers.html.erb
@@ -1,39 +1,38 @@
 <section class="section">
 	<div class="container">
-		<p class="title">View Offers</p>
+		<p class="title">My Offers</p>
 		<table class="table is-fullwidth">
 			<thead>
 				<tr>
 					<th>Date</th>
-					<th>Seller Name</th>
-					<th>Notes</th>
-					<th>Amount</th>
+					<th>Request Title</th>
+					<th>Budget</th>
+					<th>Offer Amount</th>
 					<th>Deliver in</th>
 					<th>Status</th>
-					<th>Action</th>
 				</tr>
 			</thead>
 			<tbody>
 				<% if @offers.blank? %>
 					<tr>
-						<td colspan="7" class="has-text-centered">NOTHING TO SHOW HERE</td>
+						<td colspan="6" class="has-text-centered">NOTHING TO SHOW HERE</td>
 					</tr>
 				<% end %>
 				<% @offers.each do |o| %>	
 					<tr>
 						<td><%= o.created_at.strftime("%d, %b %Y")%></td>
 						<td>
-							<figure class="image is-48x48">
-								<%= image_tag avatar_url(o.user), class: "is-rounded" %>
-							</figure>
+							<%= link_to o.request.title, request_path(o.request) %>
 						</td>
-						<td><%= o.note %></td>
+						<td><%= o.request.budget %></td>
 						<td>$<%= o.amount %></td>
 						<td><%= pluralize(o.days, 'day') %></td>
-						<td><%= o.status.capitalize %></td>
 						<td>
-							<%= link_to 'Accept', nil, class: "button is-small is-success" %>
-							<%= link_to 'Reject', nil, class: "button is-small is-danger" %>
+							<span class="tag <%= 'is-warning' if o.pending? %> 
+															 <%= 'is-success' if o.accepted? %> 
+															 <%= 'is-danger' if o.rejected? %>">
+									<%= o.status.capitalize %>
+							</span>
 						</td>
 					</tr>
 				<% end %>
