--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -79,7 +79,7 @@
 							<a class="navbar-link">Buyer Request</a>
 							<div class="navbar-dropdown">
 								<%= link_to 'Active Requests', all_requests_path, class: "navbar-item" %>
-								<a class="navbar-item">Offers Sent</a>
+								<%= link_to 'Offers Sent', my_offers_path, class: "navbar-item" %>
 							</div>
 						</div>
 						<div class="navbar-item has-dropdown is-hoverable">
