--- a/app/views/orders/buying_orders.html.erb
+++ b/app/views/orders/buying_orders.html.erb
@@ -27,7 +27,7 @@
 					<td><%= o.seller_name %></td>
 					<td>
 						<%= link_to o.title, gig_path(o.gig) if o.gig.nil? %>
-						<%= link_to o.title, request_path(o.request) if o.request.nil? %>
+						<%= link_to o.title, request_path(o.request) if !o.request.nil? %>
 					</td>
 					<td><%= o.due_date.strftime('%d %b %Y')%></td>
 					<td><%= o.amount %></td>
@@ -37,7 +37,29 @@
 						</span>
 					</td>
 					<td>
-						<%= link_to 'Mark Complete', complete_order_path(o), method: :put, class: "button is-small is-primary #{'is-hidden' if o.completed?}" %>
+						<% if !o.completed? %>
+							<%= link_to 'Mark Complete', complete_order_path(o), method: :put, class: "button is-small is-primary #{'is-hidden' if o.completed?}" %>
+						<% else %>
+							<a  class="button is-small is-outlined is-danger toggle-modal" aria-control="<%= o.id %>">Rating</a>
+							<div class="modal" id="<%= o.id %>">
+									<div class="modal-background"></div>
+									<div class="modal-content">
+										<div class="box">
+											<%= form_for Review.new do |f| %>
+												<%= f.hidden_field :order_id, value: o.id %>
+												<div class="field">
+														<div id="star_<%= o.id %>"></div>
+												</div>
+												<div class="field">
+													<%= f.text_area :review, class: "textarea" %>
+												</div>
+												<a class="toggle-modal button is-light" aria-control="<%= o.id %>">Cancel</a>
+												<%= f.submit "Add Review", class: "button is-danger" %>
+											<% end %>										
+										</div>
+									</div>
+							</div>
+						<% end %>
 					</td>
 				</tr>
 				<% end %>
@@ -46,3 +68,19 @@
 		</table>
 	</div>
 </section>
+
+<script>
+	$('.toggle-modal').on('click', (e) => {
+		e.stopPropagation();
+		e.preventDefault();
+
+		var order_id = e.target.getAttribute('aria-control');
+		$('#star_' + order_id).raty({
+			path: '/assets/raty-js/lib/images',
+			scoreName: 'review[stars]',
+			score: 1
+		});
+		$('#star_' + order_id).raty('reload');
+		$('#' + order_id).toggleClass('is-active');
+	});
+</script>
