--- a/app/views/orders/selling_orders.html.erb
+++ b/app/views/orders/selling_orders.html.erb
@@ -26,7 +26,7 @@
 					<td><%= o.buyer_name %></td>
 					<td>
 						<%= link_to o.title, gig_path(o.gig) if o.gig.nil? %>
-						<%= link_to o.title, request_path(o.request) if o.request.nil? %>
+						<%= link_to o.title, request_path(o.request) if !o.request.nil? %>
 					</td>
 					<td><%= o.due_date.strftime('%d %b %Y')%></td>
 					<td><%= o.amount %></td>
