--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -58,5 +58,15 @@ $sides: (top, bottom, left, right);
 
 .form-container {
 	margin-left: 100px;
-	margin-right: 100px;
+	margin-right: 100px; 
+}
+
+.pagination-link.is-current {
+	background-color: #00d1b2 !important;
+	border-color: #00d1b2 !important;
+}
+
+.has-bg-img {
+	background: url('/assets/home/background.jpg') center center;
+	background-size: cover;
 }
