--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -109,7 +109,7 @@
                 <!-- Pagination -->
                 <div class="card">
                     <div class="card-header-title is-centered">
-                        
+                        <%= paginate @gigs %>
                     </div>
                 </div>
             </div>
