--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<% content_for :head do %>
+	<meta name="turbolinks-cache-control" content="no-cache">
+<% end %>
 <section class="hero is-medium has-bg-img">
 	<div class="hero-body">
 		<div class="container">
@@ -5,17 +8,19 @@
 				Find Perfect Freelance Services <br>
 				For Your Business
 			</h1>
+			<%= form_tag search_path, method: :get, class: "field has-addons" do %>
 			<div class="field has-addons">
 				<div class="control has-icons-left">
 					<span class="icon is-small is-left">
 						<i class="fa fa-search"></i>
 					</span>
-					<input type="text" class="input" placeholder="Try 'logo design'">
+					<%= text_field_tag 'q', '', class: "input", placeholder: "Try 'logo design'"%>
 				</div>
 				<div class="control">
 					<button class="button is-primary" type="submit">Search</button>
 				</div>
 			</div>
+			<% end %>
 		</div>
 	</div>
 </section>
@@ -26,39 +31,46 @@
 		<div id="carousel-category" class="hero-carousel">
 			<div class="carousel-item">
 				<div class="p-10">
-					<div class="card-image">
-						<%= image_tag "home/category_1.jpg", class: "is-background", width: "100%", height: "100%" %>
-						<div class="card-content is-overlay is-clipped">
-							<span class="subtitle f-15 has-text-white">Customize Your Site</span>
-							<span class="title is-4 has-text-white">Wordpress</span>
-						</div>
-					</div>
+					<%= link_to search_path(category: 1) do %>
+							<div class="card-image" >
+								<%= image_tag "home/category_1.jpg", class: "is-background", width: "100%", height: "100%" %>
+								<div class="card-content is-overlay is-clipped">
+									<span class="subtitle f-15 has-text-white">Customize Your Site</span>
+									<span class="title is-4 has-text-white">Wordpress</span>
+								</div>
+							</div>
+					<% end %>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<div class="p-10">
-					<div class="card-image">
-						<%= image_tag "home/category_2.jpg", class: "is-background", width: "100%", height: "100%" %>
-						<div class="card-content is-overlay is-clipped">
-							<span class="subtitle f-15 has-text-white">Learn Your Business</span><br>
-							<span class="title is-4 has-text-white">Data Entry</span>
-						</div>
-					</div>
+				<%= link_to search_path(category: 2) do %>
+							<div class="card-image">
+								<%= image_tag "home/category_2.jpg", class: "is-background", width: "100%", height: "100%" %>
+								<div class="card-content is-overlay is-clipped">
+									<span class="subtitle f-15 has-text-white">Learn Your Business</span><br>
+									<span class="title is-4 has-text-white">Data Entry</span>
+								</div>
+							</div>
+					<% end %>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<div class="p-10">
-					<div class="card-image">
-						<%= image_tag "home/category_3.jpg", class: "is-background", width: "100%", height: "100%" %>
-						<div class="card-content is-overlay is-clipped">
-							<span class="subtitle f-15 has-text-white">Color Your Dream</span><br>
-							<span class="title is-4 has-text-white">Illustration</span>
+				<%= link_to search_path(category: 3) do %>
+						<div class="card-image">
+							<%= image_tag "home/category_3.jpg", class: "is-background", width: "100%", height: "100%" %>
+							<div class="card-content is-overlay is-clipped">
+								<span class="subtitle f-15 has-text-white">Color Your Dream</span><br>
+								<span class="title is-4 has-text-white">Illustration</span>
+							</div>
 						</div>
-					</div>
+					<% end %>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<div class="p-10">
+				<%= link_to search_path(category: 4) do %>
 					<div class="card-image">
 						<%= image_tag "home/category_4.jpg", class: "is-background", width: "100%", height: "100%" %>
 						<div class="card-content is-overlay is-clipped">
@@ -66,10 +78,12 @@
 							<span class="title is-4 has-text-white">Design</span>
 						</div>
 					</div>
+					<% end %>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<div class="p-10">
+				<%= link_to search_path(category: 5) do %>
 					<div class="card-image">
 						<%= image_tag "home/category_5.jpg", class: "is-background", width: "100%", height: "100%" %>
 						<div class="card-content is-overlay is-clipped">
@@ -77,10 +91,12 @@
 							<span class="title is-4 has-text-white">Social Media</span>
 						</div>
 					</div>
+					<% end %>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<div class="p-10">
+				<%= link_to search_path(category: 6) do %>
 					<div class="card-image">
 						<%= image_tag "home/category_6.jpg", class: "is-background", width: "100%", height: "100%" %>
 						<div class="card-content is-overlay is-clipped">
@@ -88,10 +104,12 @@
 							<span class="title is-4 has-text-white">Translation</span>
 						</div>
 					</div>
+					<% end %>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<div class="p-10">
+				<%= link_to search_path(category: 7 ) do %>
 					<div class="card-image">
 						<%= image_tag "home/category_7.jpg", class: "is-background", width: "100%", height: "100%" %>
 						<div class="card-content is-overlay is-clipped">
@@ -99,6 +117,7 @@
 							<span class="title is-4 has-text-white">Voice Over</span>
 						</div>
 					</div>
+					<% end %>
 				</div>
 			</div>
 		</div>
