--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -70,3 +70,26 @@ $sides: (top, bottom, left, right);
 	background: url('/assets/home/background.jpg') center center;
 	background-size: cover;
 }
+
+.avatar {
+	position: relative;
+	display: inline-block;
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: -2px;
+		right: -2px;
+		width: 10px;
+		height: 10px;
+		border: 1px solid white;
+		border-radius: 100%;
+	}  
+
+	&.online:before {
+		background-color: #1dbf73;
+	}
+	&.offline:before {
+		background-color: gray ;
+	}
+}
